# gup

./: .gitignore  .travis.yml  CHANGELOG  Makefile  README.md  all.gup  build.bat  ci.nix  clean.gup  compile.gup  default.nix  gup-test.xml.template  gup.dist  gup.install  gup.opam  gup.xml.template  local.gup  make  make.bat  run_tests.py  shell.nix  t  test-win.bat  ti  update-win.bat
builders/: gup-git-tree
examples/: README.md
examples/01-simple/: README.md  source  target.gup
examples/02-shadow/: README.md
examples/03-Gupfile/: Gupfile  README.md  gup-compile-obj  main.gup
examples/03-Gupfile/src/: main.c
examples/04-checksum/: README.md  docs-metadata.tgz.gup  docs.md  machine-id.gup  toc.md.gup
examples/05-python/: Gupfile  README.md  gup-build-src  main.gup  src
examples/06-directories/: README.md  leaf-dir.gup
examples/07-writing-target-directly/: README.md  node_modules.gup  package.json
examples/gup/: .stamp.gup  README.md  README.md.gup
gup/: builder.py  cmd.py  dofiles.py  error.py  gupfile.py  jwack.py  lock.py  log.py  output.py  parallel.py  state.py  task.py  util.py  var.py
nix/: 0001-lwt_unix-sub-second-precision-for-stat-results.patch  0002-lwt_unix-add-configure-check-to-detect-nanosecond-st.patch  default.nix  extunix.nix  gup-ocaml.nix  gup-python.nix  local.nix  local.tgz.gup  mocktest.nix  ocaml-deps.nix  opam-dep-names.nix  opam-selection.nix  opam-selection.nix.gup  opam2nix-packages.nix  ppx_deriving_protobuf.diff  pychecker.nix  sources.json  wrangle.json
nix/opam2nix-packages/: default.nix  src-opam-repository.json  src.json
ocaml/: .gitignore  Makefile  _tags  dune-project  gup.opam  main.ml  make-mlpack.py  myocamlbuild.ml  ocaml  ocamlbrowser  ocamlinit  test_opam_install.sh
ocaml/gup/: PP.ml  action.ml  buildable.ml  builder.ml  checksum.ml  cmd.ml  common.ml  dune  error.ml  flags  gupfile.ml  jbuild  logging.ml  parallel.ml  path.ml  recursive.ml  rpc.ml  rpc.proto  state.ml  state.mli  std.ml  stringMap.ml  system.ml  util.ml  utils.ml  var.ml  var_global.ml  zeroinstall_utils.ml
ocaml/test/: common.ml  dune  gupfile.ml  jbuild  mock.ml  parallel.ml  path.ml  test.ml  util.ml  utils.ml
python/: .gitignore  Makefile  build.bat  gup.cs  test-win.bat
python/gup/: builder.py  cmd.py  error.py  gupfile.py  log.py  parallel.py  path.py  state.py  task.py  util.py  var.py  whichcraft.py
resources/: Makefile
test/: nix-shell  scripts.py  test_clean.py  test_completion.py  test_dependencies.py  test_features.py  test_parallel.py  test_rules.py  test_scripts.py  util.py
test/dependencies/: test_basic.py
test/perf/: .gitignore  Gupfile  all.gup  compile-main
test/rules/: test_basic.py
(+7 files in other folders)
