opam-version: "1.2"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/gup"
maintainer: "tim@gfxmonk.net"
depends: [
  "batteries"
  "cryptokit"
  "extunix"
  "lwt" { >= "2.5.1" }
  "lwt_ppx"
  "ocamlfind" {build}
  "conf-python-2-7" {build}
  "jbuilder" {build}
  "ounit" {test}
]
build: [
  [ make "GUP_IMPL=ocaml" ]
]
depexts: [
  [["nixpkgs"] ["zlib"]]
]
install: [
  [ make "install" "GUP_IMPL=ocaml DISTDIR=%{prefix}%" ]
]
