opam-version: "2.0"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/gup"
maintainer: "tim@gfxmonk.net"
synopsis: "A better Make"
depends: [
  "batteries"
  "cryptokit"
  "extunix"
  "lwt" { >= "2.5.1" }
  "lwt_ppx"
  "ocamlfind" {build}
  "conf-python-2-7" {build}
  "jbuilder" {build}
  "ounit" {with-test}
]
build: [
  [ make "GUP_IMPL=ocaml" ]
]
depexts: [
  [["nixpkgs"] ["zlib"]]
]
install: [
  [ make "install" "GUP_IMPL=ocaml DISTDIR=%{prefix}%" ]
]
