opam-version: "2.0"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/gup"
maintainer: "tim@gfxmonk.net"
synopsis: "A better Make"
depends: [
  "batteries"
  "containers"
  "cryptokit"
  "extunix"
  "logs"
  "lwt" { >= "2.5.1" }
  "lwt_ppx"
  "ocamlfind" {build}
  "oseq"
  "seq"
  "ppx_deriving_protobuf" { >= "2.6" }
  "conf-python-2-7" {build}
  "dune" {build & >= "1.0"}
  "ounit" {with-test}
]
build: [
  [ make "-C" "ocaml" "release" ]
]
depexts: [
  [["nixpkgs"] ["zlib"]]
]
install: [
  [ make "install" "GUP_IMPL=ocaml DISTDIR=%{prefix}%" ]
]
