opam-version: "1.2"
authors: [ "tim@gfxmonk.net" ]
homepage: "https://github.com/timbertson/gup"
maintainer: "tim@gfxmonk.net"
depends: [
  "batteries"
  "cryptokit"
  "extunix"
  "lwt" { >= "2.5.1" }
  "ocamlfind" {build}
  "conf-python-2-7" {build}
  "jbuilder" {build}
]
build: [
  [ make "-C" "ocaml" "native"]
]
