; vim: set syntax=lisp commentstring=;\ %s:

(library
	(name gup)
	(modules :standard \ main)
	(libraries
		containers
		cryptokit
		extlib
		extunix
		logs
		lwt
		lwt.unix
		num
		oseq
		str
		unix
	)
	(flags (:include ./flags))
	(preprocess (pps ppx_deriving_protobuf lwt_ppx))
)

(executable
	(name main)
	(public_name gup)
	(libraries gup)
	(modules main))
